# Game-Save-Genie

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  installer-check.yml  release.yml
docker/: .env.example  README.md  docker-compose.yml
packaging/: build_exe.ps1  gsg_entry.py  installer.iss
packaging/winget/: generate_manifests.py
src/game_save_genie/: __init__.py  archive.py  cas.py  cli.py  cloud.py  config.py  custom.py  database.py  launcher.py  ludusavi.py  models.py  notify.py  remap.py  sync.py  watcher.py
tests/: test_archive.py  test_backup.py  test_cas.py  test_cli_helpers.py  test_cloud.py  test_cloud_cas.py  test_config.py  test_custom.py  test_database.py  test_linux.py  test_remap.py  test_sync.py  test_watcher.py
