[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-save-genie"
version = "0.1.0"
description = "Self-hosted cloud save sync for games - wraps Ludusavi + rclone"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Vasanthdev2004"}]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "platformdirs>=4.0",
    "requests>=2.31.0",
    "rich>=13.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "types-PyYAML",
    "types-psutil",
]

[project.scripts]
gsg = "game_save_genie.cli:app"
game-save-genie = "game_save_genie.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
game_save_genie = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
